--- a/style.css
+++ b/style.css
@@ -576,3 +576,11 @@ body {
 	text-decoration: none;
 	cursor: pointer;
 }
+
+#assemblyCode {
+	font-family: monospace;
+	width: 100%;
+	height: 20vh;
+	resize: none;
+	margin-top: 1em;
+}
